# cmmd

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: cmmd_test.py
src/cmmd/: __init__.py  cmmd_metric.py  utils.py
unittest/: cmmd_test.py
