[project]
name = "cmmd"
version = "0.1.0"
authors = [
  { name="Soham Mazumder", email="soham.mazumder@casablanca.ai" },
]
description = "CMMD Metric"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"