[project]
name = "cmmd"
version = "0.1.0"
authors = [
  { name="Soham Mazumder", email="soham.mazumder@casablanca.ai" },
]
description = "CMMD Metric"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

#dynamic = ["dependencies"]
#[tool.setuptools.dynamic]
#dependencies = {file = ["requirements.txt"]}

dependencies = [
    "transformers>=4.44.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "pillow"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"